Fix for review / Add mailpit

--- a/.env.sample
+++ b/.env.sample
@@ -40,3 +40,8 @@ AUTH_BASE_URL="http://auth-service:8000"
 # -------------------------
 API_BASE_URL="http://notifications-api:8000"
 SCHEDULER_POLL_INTERVAL_SECONDS=60
+
+# SMTP provider (Mailpit for local development)
+SMTP_HOST=mailpit
+SMTP_PORT=1025
+SMTP_FROM=noreply@example.com
